--- a/react-facts/index.html
+++ b/react-facts/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Facts</title>
-  </head>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Zalando+Sans+Expanded:ital,wght@0,200..900;1,200..900&display=swap');
+      </style>
+    </head>
   <body>
     <div id="rootDiv"></div>
     <script type="module" src="/src/main.jsx"></script>
